<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="team_one">Team 1</string>
    <string name="default_score">0</string>
    <string name="team_two">Team 2</string>
    <string name="minus_descrip">Minus Button</string>
    <string name="plus_descrip">Plus Button</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
</resources>
