<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    tools:context="shibedays.com.scorekeeper.MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/team_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_one"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <ImageButton
            android:id="@+id/minus_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_minus"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/minus_descrip"
            android:onClick="decreaseScore"/>

        <TextView
            android:id="@+id/score_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_score"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <ImageButton
            android:id="@+id/plus_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/plus_descrip"
            android:onClick="increaseScore"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/team_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/team_two"/>

        <ImageButton
            android:id="@+id/minus_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_minus"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/minus_descrip"
            android:onClick="decreaseScore"/>

        <TextView
            android:id="@+id/score_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/default_score"/>

        <ImageButton
            android:id="@+id/plus_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/plus_descrip"
            android:onClick="increaseScore"/>

    </RelativeLayout>

</LinearLayout>
